# ddt_RL

./: .gitignore
loco_mani_bundle/: README.md  pyproject.toml
loco_mani_bundle/conf/ppo/: config.yaml
loco_mani_bundle/conf/ppo/task/d1_arm_manip_loco/: mujoco.yaml
loco_mani_bundle/conf/ppo_him/task/d1_arm_manip_loco/: mujoco.yaml
loco_mani_bundle/src/unilab/assets/robots/d1_arm/: d1_with_arm.xml  scene_flat.xml
loco_mani_bundle/src/unilab/base/: registry.py
loco_mani_bundle/src/unilab/base/backend/: __init__.py
loco_mani_bundle/src/unilab/base/backend/motrix/: backend.py
loco_mani_bundle/src/unilab/envs/locomotion/: __init__.py
loco_mani_bundle/src/unilab/envs/locomotion/d1_arm/: __init__.py  base.py  manip_loco.py
