[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
# Self-contained, runnable closure of the UniLab "go2_arm_manip_loco" (loco-mani)
# example plus its two PPO algorithms (rsl_rl PPO + HIM-PPO). Extracted from the
# UniLab repo; this is a SUBSET of the full package (only modules reachable from
# this example are present). See README.md.
name = "unilab"
version = "0.1.0"
description = "UniLab loco-mani example bundle (go2_arm_manip_loco + PPO/HIM-PPO)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch==2.7.0",
    "mujoco-uni==3.8.0",
    "gymnasium",
    "imageio",
    "etils",
    "hydra-core>=1.3",
    "tensordict",
    "rsl-rl-lib>=5.0.0",
    "packaging",
    "mediapy",
    "tensorboard",
    "setuptools<70",
    "rich",
    "tqdm",
    "typing-extensions",
    "mlx ; sys_platform == 'darwin'",
    "lark>=1.3.1",
    "wandb",
    "onnxruntime<1.20 ; python_version < '3.11'",
    "onnxruntime>=1.20 ; python_version >= '3.11'",
    "huggingface_hub>=0.25",
    "ninja ; sys_platform == 'linux'",
]

# NOTE: the upstream [project.scripts] console entry points (train/eval/demo via
# unilab.cli, and the unilab-* tools) are intentionally dropped here, because
# unilab.cli / unilab.tools are NOT part of this example's import closure.
# Launch training directly through scripts/ (see README.md).

[project.optional-dependencies]
motrix = ["motrixsim-core==0.8.1"]
viser = ["viser>=1.0.26", "trimesh>=3.21.7"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform=='linux'" },
]

[tool.uv]
exclude-dependencies = ["torchvision"]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
